# CMPE-298

./: README.md
fasta-main/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  README.md
fasta-main/cmake/: fasta-config.cmake.in  fasta.cmake
fasta-main/conda/: Dockerfile  conda_build_config.yaml  cross-linux.cmake
fasta-main/demos/: CMakeLists.txt
fasta-main/exec/: CMakeLists.txt  main.cpp
fasta-main/fasta/: CMakeLists.txt  Fasta.h  GemmIndex.h  Index.h  L2Index.h  Matrix.h  types.h  version.h
fasta-main/fasta/impl/: Fasta.h  Index.h  L2Index.h  Matrix.h
fasta-main/fasta/python/: CMakeLists.txt  loader.py  swigfasta.py
fasta-main/fasta/utils/: BitVector.h  Counters.h  FastaException.h  KVVector.h  KVVectorView.h  Timers.h  sort.h
fasta-main/pytools/: __init__.py
fasta-main/tests/: CMakeLists.txt  test_bit_vector.cpp  test_kv_vector.cpp  test_kvv_view.cpp  test_matrix.cpp
